--- a/packages/test-app/src/components/Progress/Progress.css
+++ b/packages/test-app/src/components/Progress/Progress.css
@@ -1,9 +1,16 @@
 .progress {
-	margin: .5rem;
+	display: flex;
+	align-items: center;
+	max-width: 15rem;
+	padding: .5rem;
+}
+
+.progress__label {
+	flex: 1;
 }
 
 .progress__wrapper {
-	max-width: 10rem;
+	flex: 2;
 	border: 2px solid #007acc;
 	padding: 2px;
 }
