--- a/packages/test-app/src/components/Transitions/Transitions.css
+++ b/packages/test-app/src/components/Transitions/Transitions.css
@@ -4,13 +4,14 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	align-items: center;
+	justify-content: center;
 }
 
 .transitions__header {
 	position: absolute;
 	font-size: 5rem;
-	top: 1rem;
+	top: 5rem;
 	right: 1rem;
 	margin: 0;
 }
