--- a/packages/test-app/src/style.css
+++ b/packages/test-app/src/style.css
@@ -3,7 +3,15 @@ html, body {
 	padding: 0;
 }
 
-.cdv-presentation {
+* {
+	font: inherit;
+}
+
+body {
+	font-family: 'Open Sans', sans-serif;
+}
+
+.cdv-presentation__viewport {
 	position: fixed;
 	bottom: 0;
 	right: 0;
