--- a/packages/test-app/src/components/Progress/Progress.css
+++ b/packages/test-app/src/components/Progress/Progress.css
@@ -1,26 +1,31 @@
 .progress {
-	display: flex;
-	align-items: center;
-	width: 20rem;
-	padding: .5rem;
+	width: 12rem;
+	margin: 0 0 1rem 0;
+	text-align: center;
 }
 
 .progress__label {
-	flex: 1;
+	text-transform: lowercase;
+	vertical-align: top;
+	font-size: 0.8rem;
+	user-select: none;
 }
 
 .progress__wrapper {
-	flex: 2;
-	border: 2px solid #007acc;
-	border-radius: 3px;
-	padding: 2px;
+	background: rgba(0, 0, 0, .2);
+	border-radius: 999px;
+	contain: content;
 }
 
 .progress__indicator {
-	height: 1rem;
-	background: #007acc;
+	height: .5rem;
+	background: rgba(0, 0, 0, .5);
 	transform-origin: 0 0;
+	animation-name: progress-scale;
 	animation-timing-function: linear;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+	animation-play-state: paused;
 	will-change: transform;
 }
 
