--- a/packages/test-app/src/components/Transitions/Transitions.css
+++ b/packages/test-app/src/components/Transitions/Transitions.css
@@ -4,14 +4,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: center;
-	box-shadow: inset 0 0 0 1px rgba(0, 0, 0, .5);
+	justify-content: space-evenly;
 }
 
 .transitions__header {
-	position: absolute;
-	font-size: 5rem;
-	top: 5rem;
-	right: 1rem;
+	font-size: 20rem;
+	line-height: 1em;
 	margin: 0;
+	opacity: 0.2;
+	user-select: none;
 }
